* Legend :                                                                                  *
* ADDED   - indicates new functionality or new part of distribution                         *
* CHANGED - indicates a change in using/behavior JUIGLE                                     *
* FIXED   - indicates a bug fix                                                             *
*********************************************************************************************
*                                  CHANGE LOG 1.0.2 - > 2.0.0                               *
*********************************************************************************************
 * (4/27/2011) vsouhrada
     #178
        FIXED   : Fixed an error in class LanguageObservable - incorrect type of observer in detach method
     
 * (4/25/2011) vsouhrada
     #177
        FIXED   : ISSUE - # 21: SplashScreen - Deprecated problem - JXImagePanel / ImagePainter -> http://juigle.origo.ethz.ch/issues/21.

     #176
        CHANGED : Switched PluginEnine on a newest version 2.0.0-RC1.
        FIXED   : Fixed JUIGLEApplication class - now in startApplication method is calling method from IMainFrame interface - initGUI.

     #173
       
        CHANGED : PerspectiveLoader and added a method on IPerspectiveLoader interface - merged from branch JUIGLE 1.0.2.
        ADDED   : Login Dialog Service (only basic version for current time)
        CHANGED : Removed classes from db_prepare package. Package db_prepare will not be as official part of the JUIGLE release - only working package is it.
     
 * (4/24/2011) vsouhrada
     #172
     
        ADDED   : Added a new database support files. Now you can create a database from XML file, retrieve database data via Dbi objects (Database Interface).
                : Next you can create a own database repository via DAO objects (Database Access Object).
        
 * (3/25/2011) vsouhrada
     #153