@@ -1,5 +1,2 @@
-
-
-creationDate=13-Aug-2009 11:24:23
 juigle.buttons.hide.footer=Zobraz / Schovej Footer
 juigle.buttons.hide.header=Zobraz / Schovej header
