@@ -1,8 +1,2 @@
-# Java Resource Bundle
-# Modified by Zaval JRC Editor (C) Zaval CE Group
-# http://www.zaval.org/products/jrc-editor/
-#
-
-creationDate=13-Aug-2009 11:24:23
 juigle.buttons.hide.footer =Show Hide Footer
 juigle.buttons.hide.header =Show Hide Header
